[project]
name = "positive-tool"
version = "0.7.4"
description = "`positive_tool` 一個輔助開發的 Python 工具模組。目標提供實用的工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich==14.3.1"]
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest>=9.0.2", "pytest-cov>=4.0.0"]
build = ["twine"]

[project.urls]
Homepage = "https://github.com/TW0hank0/positive_tool"
Repository = "https://github.com/TW0hank0/positive_tool"

[tool.setuptools.package-data]
positive_tool = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-v --cov=positive_tool --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
log_cli_level = "INFO"
